@@ -9,6 +9,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - [core] better support for vendor customisation (based on what Debian needs)
 - rfe #2127987 warn when session.gc_maxlifetime is less than cookie validity
 - rfe #2100910 configurable default charset for import
+- rfe #1913541 link to InnoDB status when error 1005 occurs
 
 3.1.1.0 (not yet released)
 - patch #2242765 [core] Navi panel server links wrong,
